--- a/index.html
+++ b/index.html
@@ -1,95 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <a href="/">WebStudio</a>
-        <nav>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
-            </ul>
-            <ul>
-                <li><a href="">info@devstudio.com</a></li>
-                <li>+38 096 111 11 11</li>
-            </ul>
-        </nav>
+      <a href="/">WebStudio</a>
+      <nav>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li>+38 096 111 11 11</li>
+      </ul>
     </header>
 
     <div>
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <a href="">Заказать услугу</a>
-        </section>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <input
+          type="button"
+          name="first_name"
+          placeholder=""
+          value="Заказать услугу"
+        />
+      </section>
     </div>
-    <section>
+    <main>
+      <section>
         <ul>
-            <li>
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </li>
-            <li>
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-            </li>
-            <li>
-                <h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-            </li>
-            <li>
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-            </li>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
         </ul>
-    </section>
-    <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-            <li>
-                <img src="./images/box1.jpg" alt="" width="370">
-            </li>
-            <li>
-                <img src="./images/box2.jpg" alt="" width="370">
-            </li>
-            <li>
-                <img src="./images/box3.jpg" alt="" width="370">
-            </li>
-        </ul>
-    </section>
-    <section>
-        <h2>Наша команда</h2>
-        <ul>
-            <li>
-                <img src="./images/igor.jpg" alt="" width="270">
-                <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p>
-            </li>
-            <li>
-                <img src="./images/olga.jpg" alt="" width="270">
-                <h3>Ольга Репина</h3>
-                <p>Frontend Developer</p>
-            </li>
-            <li>
-                <img src="./images/nikolay.jpg" alt="" width="270">
-                <h3>Николай Тарасов</h3>
-                <p>Marketing</p>
-            </li>
-        </ul>
-    </section>
-</body>
-<footer>
-    <a href="/">WebStudio</a>
-    <p>г. Киев, пр-т Леси Украинки, 26</p>
-    <p>info@example.com</p>
-    <p>+38 099 111 11 11</p>
-</footer>
+      </section>
+    </main>
 
+    <section>
+      <h2>Чем мы занимаемся</h2>
+      <ul>
+        <li>
+          <img src="./images/box1.jpg" alt="Мы оформляем" width="370" />
+        </li>
+        <li>
+          <img src="./images/box2.jpg" alt="Мы верстаем" width="370" />
+        </li>
+        <li>
+          <img src="./images/box3.jpg" alt="Мы стилезируем" width="370" />
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <img src="./images/igor.jpg" alt="" width="270" />
+          <h3>Игорь Демьяненко</h3>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img src="./images/olga.jpg" alt="" width="270" />
+          <h3>Ольга Репина</h3>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img src="./images/nikolay.jpg" alt="" width="270" />
+          <h3>Николай Тарасов</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./images/myhailo.jpg" alt="" width="270" />
+          <h3>Михаил Ермаков</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
+    </section>
+  </body>
+  <footer>
+    <a href="/">WebStudio</a>
+    <address>
+      г. Киев, пр-т Леси Украинки, 26<br />
+      info@example.com<br />
+      +38 099 111 11 11
+    </address>
+  </footer>
 </html>
