--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
     <div>
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <input
-          type="button"
-          value="Заказать услугу"
-        />
+        <button type="button">
+          Заказать услугу
+	</button>
       </section>
     </div>
     <main>
