--- a/index.html
+++ b/index.html
@@ -1,70 +1,70 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Studio (Version 2.1)</title>
-  </head>
 
-  <body>
-    <header>
-      <a href="/">WebStudio</a>
-      <nav>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-      </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Web Studio (Version 2.1)</title>
+</head>
+
+<body>
+  <header>
+    <a href="/">WebStudio</a>
+    <nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li>+38 096 111 11 11</li>
+        <li><a href="">Студия</a></li>
+        <li><a href="">Портфолио</a></li>
+        <li><a href="">Контакты</a></li>
       </ul>
-    </header>
-
+    </nav>
+    <ul>
+      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a href="tel:+38 096 111 11 11"></a>+38 096 111 11 11</a></li>
+    </ul>
+  </header>
+  <main>
     <div>
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">
           Заказать услугу
-	</button>
+        </button>
       </section>
     </div>
-    <main>
-      <section>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </section>
-    </main>
+    <section>
+      <ul>
+        <li>
+          <h3>Внимание к деталям</h3>
+          <p>
+            Идейные соображения, а также начало повседневной работы по
+            формированию позиции.
+          </p>
+        </li>
+        <li>
+          <h3>Пунктуальность</h3>
+          <p>
+            Задача организации, в особенности же рамки и место обучения кадров
+            влечет за собой.
+          </p>
+        </li>
+        <li>
+          <h3>Планирование</h3>
+          <p>
+            Равным образом консультация с широким активом в значительной
+            степени обуславливает.
+          </p>
+        </li>
+        <li>
+          <h3>Современные технологии</h3>
+          <p>
+            Значимость этих проблем настолько очевидна, что реализация
+            плановых заданий.
+          </p>
+        </li>
+      </ul>
+    </section>
+
 
     <section>
       <h2>Чем мы занимаемся</h2>
@@ -105,13 +105,17 @@
         </li>
       </ul>
     </section>
-    <footer>
-      <a href="/">WebStudio</a>
-      <address>
-        г. Киев, пр-т Леси Украинки, 26<br />
-        info@example.com<br />
-        +38 099 111 11 11
-      </address>
-    </footer>
-  </body>
+  </main>
+  <footer>
+    <address>
+      <ul>
+        <li><a href="/">WebStudio</a></li>
+        <li>г. Киев, пр-т Леси Украинки, 26</li>
+        <li><a href="mailto:info@example.com">info@example.com</a></li>
+        <li><a href="tel:+38 096 111 11 11"></a>+38 096 111 11 11</a></li>
+      </ul>
+    </address>
+  </footer>
+</body>
+
 </html>
