--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <a href="/">WebStudio</a>
     <nav>
       <ul>
-        <li><a href="">Студия</a></li>
-        <li><a href="">Портфолио</a></li>
-        <li><a href="">Контакты</a></li>
+        <li><a href="/">Студия</a></li>
+        <li><a href="/">Портфолио</a></li>
+        <li><a href="/">Контакты</a></li>
       </ul>
     </nav>
     <ul>
