--- a/index.html
+++ b/index.html
@@ -108,12 +108,10 @@
   </main>
   <footer>
     <address>
-      <ul>
-        <li><a href="/">WebStudio</a></li>
-        <li>г. Киев, пр-т Леси Украинки, 26</li>
-        <li><a href="mailto:info@example.com">info@example.com</a></li>
-        <li><a href="tel:+38 096 111 11 11"></a>+38 096 111 11 11</a></li>
-      </ul>
+      <a href="/">WebStudio</a>
+      <p>г. Киев, пр-т Леси Украинки, 26</p>
+      <a href="mailto:info@example.com">info@example.com</a>
+      <a href="tel:+38 096 111 11 11"></a>+38 096 111 11 11</a>
     </address>
   </footer>
 </body>
