--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <a href="/">WebStudio</a>
       <p>г. Киев, пр-т Леси Украинки, 26</p>
       <a href="mailto:info@example.com">info@example.com</a>
-      <a href="tel:+38 096 111 11 11"></a>+38 096 111 11 11</a>
+      <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
     </address>
   </footer>
 </body>
