--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     <address>
       <a href="/">WebStudio</a>
       <p>г. Киев, пр-т Леси Украинки, 26</p>
-      <a href="mailto:info@example.com">info@example.com</a>
-      <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+      <p><a href="mailto:info@example.com">info@example.com</a></p>
+      <p><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></p>
     </address>
   </footer>
 </body>
