--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@
   <footer>
     <address>
       <a href="/">WebStudio</a>
-      <p>г. Киев, пр-т Леси Украинки, 26</p>
-      <a href="mailto:info@example.com">info@example.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a href="/">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <li><a href="mailto:info@example.com">info@example.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </address>
   </footer>
 </body>
