--- a/index.html
+++ b/index.html
@@ -1,123 +1,114 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web Studio (Version 2.1)</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Web Studio (Version 2.1)</title>
-</head>
-
-<body>
-  <header>
-    <a href="/">WebStudio</a>
-    <nav>
-      <ul>
-        <li><a href="/">Студия</a></li>
-        <li><a href="/">Портфолио</a></li>
-        <li><a href="/">Контакты</a></li>
-      </ul>
-    </nav>
-    <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
-  </header>
-  <main>
-    <div>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">
-          Заказать услугу
-        </button>
-      </section>
-    </div>
-    <section>
-      <ul>
-        <li>
-          <h3>Внимание к деталям</h3>
-          <p>
-            Идейные соображения, а также начало повседневной работы по
-            формированию позиции.
-          </p>
-        </li>
-        <li>
-          <h3>Пунктуальность</h3>
-          <p>
-            Задача организации, в особенности же рамки и место обучения кадров
-            влечет за собой.
-          </p>
-        </li>
-        <li>
-          <h3>Планирование</h3>
-          <p>
-            Равным образом консультация с широким активом в значительной
-            степени обуславливает.
-          </p>
-        </li>
-        <li>
-          <h3>Современные технологии</h3>
-          <p>
-            Значимость этих проблем настолько очевидна, что реализация
-            плановых заданий.
-          </p>
-        </li>
-      </ul>
-    </section>
-
-
-    <section>
-      <h2>Чем мы занимаемся</h2>
-      <ul>
-        <li>
-          <img src="./images/box1.jpg" alt="Мы оформляем" width="370" />
-        </li>
-        <li>
-          <img src="./images/box2.jpg" alt="Мы верстаем" width="370" />
-        </li>
-        <li>
-          <img src="./images/box3.jpg" alt="Мы стилезируем" width="370" />
-        </li>
-      </ul>
-    </section>
-    <section>
-      <h2>Наша команда</h2>
-      <ul>
-        <li>
-          <img src="./images/igor.jpg" alt="" width="270" />
-          <h3>Игорь Демьяненко</h3>
-          <p>Product Designer</p>
-        </li>
-        <li>
-          <img src="./images/olga.jpg" alt="" width="270" />
-          <h3>Ольга Репина</h3>
-          <p>Frontend Developer</p>
-        </li>
-        <li>
-          <img src="./images/nikolay.jpg" alt="" width="270" />
-          <h3>Николай Тарасов</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="./images/myhailo.jpg" alt="" width="270" />
-          <h3>Михаил Ермаков</h3>
-          <p>UI Designer</p>
-        </li>
-      </ul>
-    </section>
-  </main>
-  <footer>
-    <address>
+  <body>
+    <header>
       <a href="/">WebStudio</a>
+      <nav>
+        <ul>
+          <li><a href="/">Студия</a></li>
+          <li><a href="/">Портфолио</a></li>
+          <li><a href="/">Контакты</a></li>
+        </ul>
+      </nav>
       <ul>
-        <li><a
-            href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C70YzQstCw0YAg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjYsINCa0LjRl9CyLCAwMjAwMA!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-            target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a href="mailto:info@example.com">info@example.com</a></li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
-    </address>
-  </footer>
-</body>
+    </header>
+    <main>
+      <div>
+        <section>
+          <h1>Эффективные решения для вашего бизнеса</h1>
+          <button type="button">Заказать услугу</button>
+        </section>
+      </div>
+      <section>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
+      </section>
 
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <img src="./images/box1.jpg" alt="Мы оформляем" width="370" />
+          </li>
+          <li>
+            <img src="./images/box2.jpg" alt="Мы верстаем" width="370" />
+          </li>
+          <li>
+            <img src="./images/box3.jpg" alt="Мы стилезируем" width="370" />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/igor.jpg" alt="" width="270" />
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/olga.jpg" alt="" width="270" />
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/nikolay.jpg" alt="" width="270" />
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/myhailo.jpg" alt="" width="270" />
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <address>
+        <a href="/">WebStudio</a>
+        <ul>
+          <li>
+            <a
+              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C70YzQstCw0YAg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjYsINCa0LjRl9CyLCAwMjAwMA!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+              target="_blank"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
