--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
       </ul>
     </header>
     <main>
-      <div>
-        <section>
-          <h1>Эффективные решения для вашего бизнеса</h1>
-          <button type="button">Заказать услугу</button>
-        </section>
-      </div>
       <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
+      <section>
+        <h2>Наши атрибуты</h2>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
